# swagger-buddy-backend

./: Dockerfile  Makefile  app.json  docker-compose-dev.yaml  entrypoint.sh  pyproject.toml
app/: __init__.py  main.py
app/common/: exceptions.py  handlers.py  models.py  response.py  router.py  schema.py
app/database/: config.py
app/project/: models.py  router.py  service.py
app/project/schemas/: create_project.py  create_project_response.py  delete_project_response.py  get_project_response.py  get_projects_response.py
app/swagger_buddy/: router.py
app/swagger_buddy/schemas/: input.py
app/token/: models.py  service.py
app/user/: models.py  router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 04e253135f6b_added_base_url_field_to_project_model.py  415f97e06021_added_project_model.py  778fd40c4476_removeed_all_models_apart_from_users.py  77c5b607fab3_.py  8fc97128e17c_removed_required_from_pathparameters_.py  cc929b2fd02a_added_body_header_pathparameters_and_.py  e91cc1a6f504_added_project_and_sub_models.py
settings/: __init__.py  config.py
